Fixed header meterView alignment

--- a/src/public/css/HeaderView.less
+++ b/src/public/css/HeaderView.less
@@ -15,12 +15,11 @@
 	top: 0;
 	margin-left: auto;
 	content: "Config \f013";
-	font-size: 16px;
+	font-size: 20px;
+	float:right;
+	text-align:right;
 	margin-top: 0;
-	width: 90px;
 	height: 48px;
-	border-left: 1px solid #ccc;
-	padding-left: 30px;
 	margin-right: 30px;
 	line-height: 48px;
 	vertical-align: middle;
